--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  IMPROVEMENTS:

    * ``bzr export --format=tgz --root=NAME -`` to export a gzipped tarball 
      to stdout; also ``tar`` and ``tbz2``.
      (Martin Pool)

  BUGFIXES:

    * ``needs_read_lock`` and ``needs_write_lock`` now suppress an error during
      ``unlock`` if there was an error in the original function. This helps
      most when there is a failure with a smart server action, since often the
      connection closes and we cannot unlock.
      (Andrew Bennetts, John Arbash Meinel, #125784)

    * Raise the correct exception when doing ``-rbefore:0`` or ``-c0``.
      (John Arbash Meinel, #239933)

    * You can now compare file revisions in Windows diff programs from 
      Cygwin Bazaar.
      (Matt McClure, #209281)

  DOCUMENTATION:

    * Updated developer documentation.
      (Martin Pool)

  TESTING:

  API CHANGES:

  INTERNALS:


bzr 1.6beta2 2008-06-10
-----------------------

This release contains further progress towards our 1.6 goals of shallow
repositories, and contains a fix for some user-affecting bugs in the
repository layer.  Building working trees during checkout and branch is
now faster.

  BUG FIXES:

    * Avoid KnitCorrupt error extracting inventories from some repositories.
      (The data is not corrupt; an internal check is detecting a problem
      reading from the repository.)
      (Martin Pool, Andrew Bennetts, Robert Collins, #234748)

    * ``bzr status`` was breaking if you merged the same revision twice.
      (John Arbash Meinel, #235407)

    * Fix infinite loop consuming 100% CPU when a connection is lost while
      reading a response body via the smart protocol v1 or v2.
      (Andrew Bennetts)
      
    * Inserting a bundle which changes the contents of a file with no trailing
      end of line, causing a knit snapshot in a 'knits' repository will no longer
      cause KnitCorrupt. (Robert Collins)
