@@ -401,6 +401,11 @@ def report_exception(exc_info, err_file):
     elif isinstance(exc_object, KeyboardInterrupt):
         err_file.write("bzr: interrupted\n")
         return errors.EXIT_ERROR
+    elif isinstance(exc_object, ImportError) \
+        and str(exc_object).startswith("No module named "):
+        report_user_error(exc_info, err_file,
+            'You may need to install this Python library separately.')
+        return errors.EXIT_ERROR
     elif not getattr(exc_object, 'internal_error', True):
         report_user_error(exc_info, err_file)
         return errors.EXIT_ERROR
@@ -423,15 +428,21 @@ def print_exception(exc_info, err_file):
 
 
 # TODO: Should these be specially encoding the output?
-def report_user_error(exc_info, err_file):
+def report_user_error(exc_info, err_file, advice=None):
     """Report to err_file an error that's not an internal error.
 
     These don't get a traceback unless -Derror was given.
+
+    :param exc_info: 3-tuple from sys.exc_info()
+    :param advice: Extra advice to the user to be printed following the
+        exception.
     """
     if 'error' in debug.debug_flags:
         print_exception(exc_info, err_file)
         return
     err_file.write("bzr: ERROR: %s\n" % (exc_info[1],))
+    if advice:
+        err_file.write("%s\n" % (advice,))
 
 
 def report_bug(exc_info, err_file):
